book/tests/snapshots/snapshot__run_display_reference_prql@functions-3.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/queries/functions-3.prql
---
prql dialect:generic

func celsius_of_fahrenheit `temp` -> `temp` - 32 * 3



from `cities`
derive temp_c = (
  `temp_f`
  `celsius_of_fahrenheit`
)


