book/tests/snapshots/snapshot__run_display_reference_prql@group-1.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/group-1.prql
---
prql dialect:generic

from `employees`
sort `join_date`
take 1


