book/tests/snapshots/snapshot__run_display_reference_prql@group-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/group-2.prql
---
prql dialect:generic

from `employees`
group `role` (
  sort `join_date`
  take 1
)


