book/tests/snapshots/snapshot__run_display_reference_prql@join-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/join-0.prql
---
prql dialect:generic

from `employees`
join side:`left` `positions` [`id` == `employee_id`]


