book/tests/snapshots/snapshot__run_display_reference_prql@join-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/transforms/join-2.prql
---
prql dialect: generic

from employees
join side:left p = positions [id == employee_id]

